--- a/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/src/app/customer-dashboard/customer-dashboard.component.html
@@ -1,2 +1,11 @@
 <app-sidebar></app-sidebar>
-<p>customer-dashboard works!</p>
+<div style="margin-left:400px;">
+    <h2 style="margin-top: 20px;margin-bottom: 20px;">My Enquiries</h2>
+    <div id="example2">
+        <a href="#" style="text-decoration: none;">Title</a>
+        <button style="float: right;">View Quotation</button>
+        <button style="float: right;margin-right: 10px;">View Enquiry</button>
+        
+    </div>
+    
+</div>
