--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
   <body><div class="area"></div><nav class="main-menu">
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="/customerdashboard">
                         <i class="fa fa-home fa-2x"></i>
                         <span class="nav-text">
                             Dashboard
@@ -14,7 +14,7 @@
                   
                 </li>
                 <li class="has-subnav">
-                    <a href="#">
+                    <a href="/newenquiry">
                         <i class="fa fa-laptop fa-2x"></i>
                         <span class="nav-text">
                             New Enquiry
