--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,10 @@
 <div class="login-page">
     <div class="form">
-      <form class="register-form">
-        <input type="text" placeholder="name"/>
-        <input type="password" placeholder="password"/>
-        <input type="text" placeholder="email address"/>
-        <button>create</button>
-        <p class="message">Already registered? <a href="#">Sign In</a></p>
-      </form>
-      <form class="login-form">
+      <!-- <form class="login-form"> -->
         <input type="text" placeholder="username"/>
         <input type="password" placeholder="password"/>
-        <button>login</button>
+        <button (click)="login()">login</button>
         <p class="message">Not registered? <a href="/signup">Register Now!</a></p>
-      </form>
+      <!-- </form> -->
     </div>
   </div>
